...

  final List<String> categories = [
    "Book",
    "Cloth",
    "Electronics",
    "Experience",
    "Food/Gourmet Item",
    "Gift Card",
    "Home Decor",
    "Jewelry",
    "Personal Care Product",
    "Subscription",
    "Toy/Game"
...
              content: SingleChildScrollView(
                child: Column(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    // Gift Name
                    TextField(
                      key: const Key('Gift Name'),
                      decoration: const InputDecoration(hintText: "Gift Name"),
                      onChanged: (value) => newName = value,
                    ),
                    const SizedBox(height: 10),

                    // Description
                    TextField(
                      key: const Key('Gift Description'),
                      decoration: const InputDecoration(hintText: "Description"),
                      onChanged: (value) => newDescription = value,
                    ),
                    const SizedBox(height: 10),

                    // Category Dropdown
                    DropdownButton<String>(
                      key: const Key("Dropdown Category"),
                      value: newCategory,
                      isExpanded: true,
                      onChanged: (String? value) {
                        setState(() {
                          newCategory = value!;
                        });
...
                      }).toList(),
                    ),
                    const SizedBox(height: 10),

                    // Price
                    TextField(
                      key: const Key('Price'),
                      decoration: const InputDecoration(hintText: "Price"),
                      keyboardType: TextInputType.number,
                      onChanged: (value) => newPrice = double.tryParse(value) ?? 0.0,
                    ),
                    const SizedBox(height: 10),

...
              actions: [
                TextButton(
                  child: const Text("Cancel"),
                  onPressed: () => Navigator.of(context).pop(),
                ),
                TextButton(
                  key: const Key("Add Button"),
                  child: const Text("Add"),
                  onPressed: () async {
                    bool flag = true;
                    if (newName.isNotEmpty &&
                        newDescription.isNotEmpty &&
                        newPrice > 0 &&
                        selectedEvent != null) {
...

                    if (result is Gift) {
                      FirebaseGiftService.updateGiftInFirestore(result);
                    }
                  },
                  child: Card(
                    key: const Key("giftCard"),
                    color: gift.status == "Pledged" ? Colors.orange : Colors.blue,
                    child: Row(
                      children: [
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: CircleAvatar(
...
