...
    return null;
  }


  void _addEvent() {
    final List<String> categories = [
      "Birthday",
      "Baby Shower",
      "Wedding",
      "Engagement Ceremony",
      "House Party",
      "Holiday Gathering",
      "Family Gathering",
...
              title: const Text("Add New Event"),
              content: SingleChildScrollView(
                child: Column(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    TextField(
                      key: const Key('Event Name'),
                      decoration: const InputDecoration(hintText: "Event Name"),
                      onChanged: (value) => newName = value,
                    ),
                    const SizedBox(height: 10),
                    TextField(
                      key: const Key('Location'),
                      decoration: const InputDecoration(hintText: "Location"),
                      onChanged: (value) => newLocation = value,
                    ),
                    const SizedBox(height: 10),

                    // Category Dropdown
...
                      onChanged: (value) => newDescription = value,
                    ),
                    const SizedBox(height: 10),
                    TextButton(
                      child: Text(newDate != null
                          ? "Date & Time: ${_formatDateTime(newDate!)} ${_formatTime(newDate!)}"
                          : "Pick Date & Time"),
                      onPressed: () async {
                        DateTime? pickedDateTime = await _pickDateTime(context);
                        setState(() {
                          newDate = pickedDateTime ?? DateTime.now();
                        });
                      },
...
