...
        bottomNavigationBar: CurvedNavigationBar(
          backgroundColor: MyColors.blue,
          color: MyColors.orange,
          items: const <Widget>[
            Icon(Icons.person_2_outlined, size: 30, key: Key('profileIcon'),),
            Icon(Icons.add, size: 30, key: Key('addIcon'),),
            Icon(CupertinoIcons.gift, size: 30, key: Key('giftIcon'),),
            Icon(CupertinoIcons.calendar_badge_plus, size: 30, key: Key('eventIcon'),),
          ],
          onTap: (index) {
            switch(index){
              case 0:
                Navigator.pushNamed(context, '/ProfilePage', arguments: user);
                break;
...
